--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -1,8 +1,8 @@
 <div fxLayout="column" class="full-width">
   <div fxLayout="row" fxLayoutAlign="center center">
     <div fxFlex="20px"></div>
-    <div class="logo clickable" [routerLink]="['/home']"><img src="/assets/ms-icon-310x310.png"></div>
-    <h1 class="pad-sides clickable" [routerLink]="['/home']">DSLimited</h1>
+    <div class="logo clickable" [routerLink]="['/']"><img src="/assets/ms-icon-310x310.png"></div>
+    <h1 class="pad-sides clickable" [routerLink]="['/']">DSLimited</h1>
     <div fxFlex></div>
     <div class="clickable" [routerLink]="['/acct/myaccount']" fxHide.lt-md><h3><u>Option 1</u></h3></div>
     <div fxFlex="20px" fxHide.lt-md></div>
@@ -10,16 +10,17 @@
     <div fxFlex="20px" fxHide.lt-md></div>
     <div class="clickable" [routerLink]="['/acct/myaccount']" fxHide.lt-md><h3><u>Option 3</u></h3></div>
     <div fxFlex="20px" fxHide.lt-md></div>
-    <div class="clickable" [routerLink]="['/acct/login']" fxHide.lt-md *ngIf="!isLoggedIn()"><h3><u>Login / Register</u></h3></div>
     <div fxFlex fxHide.lt-md></div>
-    <div class="clickable" fxHide.lt-md *ngIf="isLoggedIn()" [matMenuTriggerFor]="menu"><h3><mat-icon>account_circle</mat-icon><u>{{ username }}</u></h3></div>
+    <div class="clickable" [routerLink]="['/acct/login']" fxHide.lt-md *ngIf="!isLoggedIn()"><h3><u>Login / Register</u></h3></div>
+    <div class="clickable" fxHide.lt-md *ngIf="isLoggedIn()" [matMenuTriggerFor]="menu"><h3><mat-icon>account_circle</mat-icon><u>{{ username }}</u><mat-icon>arrow_drop_down</mat-icon></h3></div>
     <div [matMenuTriggerFor]="mobileMenu" fxHide.gt-sm><h3><mat-icon class="pad clickable">menu</mat-icon></h3></div>
     <div fxFlex.lt-md=5 fxFlex.gt-sm="20px"></div>
     <mat-menu #mobileMenu="matMenu">
       <button mat-menu-item class="clickable" [routerLink]="['/account/properties']">Option 1</button>
       <button mat-menu-item class="clickable" [routerLink]="['/account/alerts']">Option 2</button>
-      <button mat-menu-item [routerLink]="['/acct/myaccount']">Account Settings</button>
-      <button mat-menu-item class="clickable" (click)="logout()">Logout</button>
+      <button mat-menu-item *ngIf="!isLoggedIn()" class="clickable" [routerLink]="['/acct/login']">Login / Register</button>
+      <button mat-menu-item *ngIf="isLoggedIn()" [routerLink]="['/acct/myaccount']">Account Settings</button>
+      <button mat-menu-item *ngIf="isLoggedIn()" class="clickable" (click)="logout()">Logout</button>
     </mat-menu>
     <mat-menu #menu="matMenu" [overlapTrigger]="false">
       <button mat-menu-item [routerLink]="['/acct/myaccount']">Account Settings</button>
