--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,1 +1,5 @@
-<div id="container" class.gt-sm="svg-container" class.lt-md="svg-container-lt-md"></div>
+<div fxLayout="row">
+	<div fxHide.lt-md fxFlex></div>
+	<div id="container" class.gt-sm="svg-container" class.lt-md="svg-container-lt-md"></div>
+	<div fxHide.lt-md fxFlex></div>
+</div>
