--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 html, body {
-	height: 100%;
-	width: 100%;
+	min-height: 100%;
+	min-width: 100%;
 	margin: 0;
 	font-family: 'Saira Semi Condensed', sans-serif;
 }
