--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -3,3 +3,4 @@
 	<div id="container" class.gt-sm="svg-container" class.lt-md="svg-container-lt-md"></div>
 	<div fxHide.lt-md fxFlex></div>
 </div>
+<div fxFlex></div>
