--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,3 +11,6 @@
     <!-- Footer -->
     <app-footer id="footer"></app-footer>
 </div>
+
+<div class="fab-nav fab-nav-left" (click)="changeChart(-1)" [ngStyle]="{display:(chartHidden)?'none':''}"><button mat-fab color="primary"><mat-icon aria-label="left">chevron_left</mat-icon></button></div>
+<div class="fab-nav fab-nav-right" (click)="changeChart(1)" [ngStyle]="{display:(chartHidden)?'none':''}"><button mat-fab color="primary"><mat-icon aria-label="right">chevron_right</mat-icon></button></div>
