--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,13 @@
     <app-top-nav id="topNav"></app-top-nav>
 
     <!-- Body -->
-    <div fxLayout="column" fxLayoutAlign="center center">
+    <div fxLayout="column" fxLayoutAlign="start center" [ngStyle]="{'min-height':chartHeight + 'px'}">
         <app-chart [chartHeight]="chartHeight" [chartWidth]="chartWidth" [chartApi]="chartApi" [ngStyle]="{display:(chartHidden)?'none':''}"></app-chart>
+		<div class="fab-nav fab-nav-left" (click)="changeChart(-1)" [ngStyle]="{display:(chartHidden)?'none':''}"><button mat-fab color="primary"><mat-icon aria-label="left">chevron_left</mat-icon></button></div>
+		<div class="fab-nav fab-nav-right" (click)="changeChart(1)" [ngStyle]="{display:(chartHidden)?'none':''}"><button mat-fab color="primary"><mat-icon aria-label="right">chevron_right</mat-icon></button></div>
         <router-outlet></router-outlet>
     </div>
 
     <!-- Footer -->
     <app-footer id="footer"></app-footer>
 </div>
-
-<div class="fab-nav fab-nav-left" (click)="changeChart(-1)" [ngStyle]="{display:(chartHidden)?'none':''}"><button mat-fab color="primary"><mat-icon aria-label="left">chevron_left</mat-icon></button></div>
-<div class="fab-nav fab-nav-right" (click)="changeChart(1)" [ngStyle]="{display:(chartHidden)?'none':''}"><button mat-fab color="primary"><mat-icon aria-label="right">chevron_right</mat-icon></button></div>
